--- a/index.html
+++ b/index.html
@@ -368,6 +368,51 @@
 
   <header>
     <h1>RPP Estudio</h1>
-    <p>Ayudo a marc
+    <p>Ayudo a marcas y emprendedores a conectar con su audiencia a través de contenido profesional.</p>
+  </header>
+
+  <section id="sobre-mi">
+    <h2>Sobre mí</h2>
+    <p>Soy Gabriel Federico Romero Pérez, creador de RPP Estudio. Me dedico a generar contenido que transmite, emociona y conecta. Ya sea para redes sociales, blogs o plataformas audiovisuales, creo piezas que reflejan el mensaje y la esencia de cada marca.</p>
+  </section>
+
+  <section id="servicios" class="services">
+    <h2>Servicios</h2>
+    <ul>
+      <li><i class="fa-solid fa-pen-nib"></i><strong>Redacción de artículos:</strong><br> Textos bien estructurados y optimizados para blogs o páginas web.</li>
+      <li><i class="fa-brands fa-youtube"></i><strong>Guiones para YouTube/TikTok:</strong><br> Ideas claras, creativas y listas para grabar con impacto.</li>
+      <li class="highlighted"><i class="fa-brands fa-twitter"></i><strong>Contenido para redes sociales:</strong><br> Textos simples, atractivos y directos para conectar con tu público en Instagram, Facebook, X (Twitter) y más.</li>
+      <li><i class="fa-solid fa-lightbulb"></i><strong>Estrategia de contenido:</strong><br> Planificación profesional para que sepas qué publicar y cuándo.</li>
+      <li><i class="fa-solid fa-check-double"></i><strong>Revisión y mejora de textos:</strong><br> Corregimos errores y mejoramos tu mensaje para hacerlo claro y profesional.</li>
+    </ul>
+  </section>
+
+  <section id="contacto">
+    <h2>Contacto</h2>
+    <form class="contact-form" action="https://formspree.io/f/xpwrvnbr" method="POST">
+      <input type="text" name="name" placeholder="Tu nombre" required />
+      <input type="email" name="_replyto" placeholder="Tu email" required />
+      <textarea name="message" rows="5" placeholder="Tu mensaje" required></textarea>
+      <button type="submit">Enviar</button>
+    </form>
+  </section>
+
+  <a 
+    href="https://wa.me/681044146?text=Hola%20soy%20Gabriel%2C%20encantado%20de%20conocerte.%C2%BFEn%20qu%C3%A9%20puedo%20ayudarte%3F" 
+    target="_blank" 
+    rel="noopener noreferrer" 
+    aria-label="Contacto por WhatsApp" 
+    class="whatsapp-button"
+  >
+    <i class="fab fa-whatsapp" aria-hidden="true"></i>
+  </a>
+
+  <footer>
+    <p>© 2025 RPP Estudio. Todos los derechos reservados.</p>
+  </footer>
+
+</body>
+</html>
+
 
 
