--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
   </section>
 
   <a 
-    href="https://wa.me/`+34681044146?text=Hola%20soy%20Gabriel%2C%20encantado%20de%20conocerte.%C2%BFEn%20qu%C3%A9%20puedo%20ayudarte%3F" 
+    href="https://wa.me/34681044146?text=Hola%20soy%20Gabriel%2C%20encantado%20de%20conocerte.%C2%BFEn%20qu%C3%A9%20puedo%20ayudarte%3F" 
     target="_blank" 
     rel="noopener noreferrer" 
     aria-label="Contacto por WhatsApp" 
